# Qbo_A608-Orin-Nx16G_ROS2

./: .gitignore
qbo_arduqbo/: CMakeLists.txt  README.md  arduqbo_setup.md  dynamixel_setup.md  dynamyxel_setup.md  package.xml  udev-setup-qbo.md  udev-setup-qbo_v1-2.md
qbo_arduqbo/config/: battery_controller.yaml  diagnostics_aggregator.yaml  dynamixel_config.yaml  qboards_config.yaml
qbo_arduqbo/include/qbo_arduqbo/: qbo_arduqbo.hpp
qbo_arduqbo/include/qbo_arduqbo/cereal_port/: CerealPort.h
qbo_arduqbo/include/qbo_arduqbo/controllers/: base_controller.hpp  battery_controller.hpp  dynamixel_controller.hpp  imu_controller.hpp  lcd_controller.hpp  mouth_controller.hpp  nose_controller.hpp  sensor_controller.hpp
qbo_arduqbo/include/qbo_arduqbo/drivers/: arduqbo_instructions.h  (+1 more)
qbo_arduqbo/launch/: base_hardware.launch.py  qbo_full.launch.py
qbo_arduqbo/src/: qbo_arduqbo.cpp  qbo_dynamixel.cpp  qboard3_driver.cpp  scan_dxl.py  test_serial_main.cpp
qbo_arduqbo/src/cereal_port/: CerealPort.cpp
qbo_arduqbo/src/controllers/: audio_controller.cpp  base_controller.cpp  battery_controller.cpp  dynamixel_controller.cpp  imu_controller.cpp  lcd_controller.cpp  mouth_controller.cpp  nose_controller.cpp  sensor_controller.cpp
qbo_arduqbo/src/drivers/: arduqbo_instructions.cpp  qboduino_driver.cpp
qbo_driver/: AIML_ARCHITECTURE.md  Readme.md  Setup_ListenTalk.md  package.xml  requirements.txt  setup.cfg  setup.py
qbo_driver/config/: OrinA608Diag_param.yaml  diagnostic_aggregator.yaml  listen_whisper.yaml  qbo_aiml.yaml  qbo_tts_pico.yaml  question_1.json  talk_tts.yaml  thresholds.yaml
qbo_driver/config/LLM/: qa_index.faiss  qa_pairs.json
qbo_driver/config/RS/: qbo.rive
qbo_driver/config/data_pairs/: qa_base.json  qa_battery_ch.json  qa_battery_vc.json  qa_conversation1.json  qa_conversation2.json  qa_conversation3.json  qa_conversation4.json  qa_dynamixel.json  qa_imu.json  qa_lcd.json  qa_mouth.json  qa_nose.json  qa_nose_ch.json  qa_nose_vc.json  qa_orinA608.json  qa_pairs.json  qa_sensor.json
qbo_driver/config/others/: pronunciation_map.json  state_watchers.json
qbo_driver/config/prompts/: battery.txt  test_faiss.json
qbo_driver/launch/: audio_stack.launch.py  dual_camera_v412_launch.py  gscam_imx219_launch.py  qbo_audio.launch.py  qbo_diag.launch.py
qbo_driver/qbo_driver/: aiml.py  aiml_old.py  brainRS.py  diag_node_old.py  diagnosticLog.py  hardwareOrinA608.py  listen_whisper.py  listen_whisper_old.py  pan_tilt_tester_node.py  qa_batch_tester.py  talk_TTS.py  talk_TTS_old.py  talk_piper.py  test_joint_latency.py  tts_pico.py
qbo_driver/qbo_driver/qbo_aiml/: constants.py  diagnostics_parser.py  event_manager.py  intent_engine.py  llm_engine.py  parameter_extractors.py  qa_loader.py  speech_generator.py  test_engine.py
qbo_driver/src/: listen_old.py  talk_piper.py
qbo_driver/test/: test_diag.py
qbo_interface/: package.xml  setup.cfg  setup.py
qbo_interface/launch/: smach_qbo.launch.py
qbo_interface/qbo_interface/: smach_qbo.py  smach_qbo_old1.py  web_qbo.py
qbo_interface/qbo_interface/utils/: launch_utils.py
qbo_interface/web/: index.html  script.js  style.css
qbo_msgs/: CMakeLists.txt  package.xml
qbo_msgs/msg/: BatteryLevel.msg  BehaviorIntent.msg  DecisionTrace.msg  EnrollmentProgress.msg  FaceObservation.msg  FacePosAndDist.msg  FaceRecognitionResult.msg  FollowerStatus.msg  LCD.msg  ListenResult.msg  MicReport.msg  MotorState.msg  Mouth.msg  Nose.msg  SocialEvent.msg  WorldState.msg
qbo_msgs/srv/: CalibrateIMU.srv  GenerateText.srv  GetName.srv  LearnFaces.srv  ListPersons.srv  ManageProfile.srv  RecognizeFace.srv  SetFollowerStatus.srv  SetMouthAnimation.srv  StartEnrollPerson.srv  TestLeds.srv  TestMouthLeds.srv  TorqueEnable.srv  Train.srv
qbo_navigation/: package.xml  setup.cfg  setup.py
qbo_navigation/config/: nav2_ctrl_server_params.yaml  nav2_laser_params.yaml  nav2_params.yaml
qbo_navigation/launch/: nav2.launch.py
qbo_rqt/: package.xml  plugin.xml  setup.cfg  setup.py
qbo_rqt/qbo_rqt/: pan_tilt_plugin.py  system_view_plugin.py
qbo_rqt/resource/: pan_tilt_plugin.ui  pan_tilt_plugin_v1.ui
qbo_social/: behavior_engine.md  package.xml  setup.cfg  setup.py  setup_social.md
qbo_social/config/: qbo_social_params.yaml
qbo_social/launch/: social.launch.py
qbo_social/qbo_social/: action_executor.py  app_qbo.py  behavior_engine.py  debug_behavior_state.py  decision_trace_monitor.py  event_adapter.py  sbe_follower_client_example.py  system_mode_manager.py  test_goal.py  world_model.py
qbo_social/qbo_social/actions/: base_action.py  display_actions.py  profile_actions.py  social_actions.py  speech_actions.py  tracking_actions.py
qbo_social/qbo_social/adapters/: __init__.py  diagnostics_adapter.py  diagnostics_inspector.py  face_adapter.py
qbo_social/qbo_social/clients/: bringup_client.py  display_client.py  follower_client.py  tts_client.py
qbo_social/qbo_social/static/: dashboard.js  index.html  style.css
qbo_social/qbo_social/utils/: __init__.py  network_event_publisher.py  time_event_publisher.py
qbo_vision/: CMakeLists.txt  FaceVision_setup.md  package.xml  setup.cfg  setup.py
qbo_vision/config/: face_detector.yaml  face_follower.yaml  face_follower_old.yaml  face_recognition.yaml  face_recognizer.yaml  face_tracker.yaml
qbo_vision/config/calibration/: default_camera_info.yaml  left_camera_640x480.yaml  left_camera_800x600.yaml
qbo_vision/faces/: persons.yaml
qbo_vision/include/: face_database.hpp  face_detector.hpp  face_follower.hpp  face_follower_old.hpp  face_learning_node.hpp  face_recognition.hpp  face_recognizer.hpp  face_recognizer_old.hpp  face_tracker.hpp
qbo_vision/launch/: camera_with_calibration.launch.py  d435_nav.launch.py  qbo_face_vision.launch.py
qbo_vision/qbo_vision_py/: face_capture_node.py  face_recognizer_node.py
qbo_vision/src/: face_database.cpp  face_detector.cpp  face_follower.cpp  face_follower_new.cpp  face_follower_old.cpp  face_learning_node.cpp  face_recognition.cpp  face_recognizer.cpp  face_tracker.cpp  gstreamer_camera_node.cpp  imx219_camera_node.cpp
(+79 files in other folders)
