<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>qbo_driver</name>
  <version>0.1.2</version>
  <description>
    qbo_driver is a ROS 2 package designed for the QBO platform running on the Jetson Orin NX.
    It provides a hardware diagnostics node that monitors system health in real-time
    (temperature, memory, disk, CPU, GPU, etc.), with configurable alert thresholds.
    Diagnostics are published using the standard DiagnosticArray message format.
  </description>
  <maintainer email="sylvain-zwolinski@orange.fr">qbo_ros2</maintainer>
  <author email="sylvain-zwolinski@orange.fr">zwolinski</author>
  <license>BSD-3-Clause</license>

  <depend>rclpy</depend>
  <depend>diagnostic_msgs</depend>
  <depend>diagnostic_updater</depend>

  <exec_depend>std_msgs</exec_depend>
  <exec_depend>qbo_msgs</exec_depend>
  <exec_depend>python3-diagnostic-updater</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
