<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>qbo_interface</name>
  <version>0.1.1</version>
  <description>
    A ROS 2 package providing state-machine-based supervision for the Qbo robot using SMACH.
    It launches Qbo's hardware controllers, monitors diagnostics, and reacts with LED/LCD/audio feedback.
  </description>
  <maintainer email="sylvain-zwolinski@orange.fr">qbo_ros2</maintainer>
  <author email="sylvain-zwolinski@orange.fr">zwolinski</author>
  <license>BSD-3-Clause</license>

  <depend>rclpy</depend>
  <depend>diagnostic_msgs</depend>
  <depend>qbo_msgs</depend>
  <depend>qbo_arduqbo</depend>
  <depend>qbo_driver</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
