<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>qbo_msgs</name>
  <version>0.1.3</version>
  <description>
    ROS 2 message definitions for the QBO platform.
    This package includes custom messages for sensor data, actuator commands,
    and system status, designed to facilitate communication between QBO's
    hardware and software components in a ROS 2 environment.
  </description>
  <maintainer email="sylvain-zwolinski@orange.fr">qbo_ros2</maintainer>
  <author email="sylvain-zwolinski@orange.fr">zwolinski</author>
  <license>BSD-3-Clause</license>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>builtin_interfaces</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
