<?xml version="1.0"?>
<package format="3">
  <name>qbo_navigation</name>
  <version>0.1.1</version>
  <description>Navigation stack for Qbo robot using Nav2 and RealSense D435</description>

  <maintainer email="sylvain-zwolinski@orange.fr">zwolinski</maintainer>
  <author email="sylvain-zwolinski@orange.fr">zwolinski</author>
  <license>Apache-2.0</license>

  <!-- Build tool -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime dependencies -->
  <depend>rclpy</depend>

  <!-- Nav2 -->
  <depend>nav2_bringup</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>nav2_util</depend>

  <!-- TF -->
  <depend>tf2_ros</depend>

  <!-- Messages -->
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>

  <!-- Launch -->
  <depend>launch</depend>
  <depend>launch_ros</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>