<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>qbo_rqt</name>
  <version>0.1.1</version>
  <description>
  QBO RQt Plugins
  This plugin is compatible with RQt and tested under Ubuntu 22.04 + ROS 2 Humble on Jetson Orin NX.
  </description>
  <maintainer email="sylvain-zwolinski@orange.fr">qbo_ros2</maintainer>
  <author email="sylvain-zwolinski@orange.fr">zwolinski</author>
  <license>BSD-3-Clause</license>

  <!-- <exec_depend>qt_gui</exec_depend>
  <exec_depend>qt_gui_py_common</exec_depend> -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <depend>rqt_gui</depend>
  <depend>rqt_gui_py</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>qbo_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <architecture_independent/>
    <build_type>ament_python</build_type>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>

</package>
