<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>qbo_vision</name>
  <version>0.1.4</version>
  <description>
    Camera visin.
  </description>

  <maintainer email="sylvain-zwolinski@orange.fr">qbo_ros2</maintainer>
  <author email="sylvain-zwolinski@orange.fr">zwolinski</author>
  <license>BSD-3-Clause</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>image_transport</depend>
  <depend>qbo_msgs</depend>

  <build_depend>OpenCV</build_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>onnxruntime</exec_depend>
  <exec_depend>faiss</exec_depend>
  <exec_depend>OpenCV</exec_depend>
  <exec_depend>usb_cam</exec_depend>
  <exec_depend>camera_info_manager</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
